# email_marketing

./: .gitignore  AUDITORIA_FINAL.md  INFORME_REVISION.md  README.md  REORGANIZACION_PLAN.md  SCRAPING_GUIA.md  email_sender.py  fix_csv.py  main.py  mark_sent_until.py  pyproject.toml  requirements.txt
1_GMAIL_CAMPAIGNS_V1/: README.md  email_sender.py  main.py
2_WHATSAPP_SCRAPER/: README.md
3_HF_CAMPAIGNS/: .env.example  .gitignore  ARGUMENTARIO_LLAMADAS.md  AUDITORIA_COMPLETADA.md  README.md  analisis_farmacias_galicia.py  analisis_visual.py  generar_lista_llamadas.py  main.py  requirements.txt
3_HF_CAMPAIGNS/DOCS_ARCHIVED/: ESTRATEGIA_2_vs_4_PRODUCTOS.md  PORQUE_2_MEJOR_QUE_4.md  RESUMEN_DOCS_ARCHIVED.md  RESUMEN_EJECUTIVO.md
DOCS/: LECCIONES_APRENDIDAS.md
TEMPLATES/: email_camp_1.html
distutils/: __init__.py  version.py
scrapers/: maps_scraper.py  whatsapp_contact_manager.py
