[project]
name = "email_marketing"
version = "0.1.0"
description = "Email marketing tools and Google Maps scraper"
requires-python = ">=3.12"
dependencies = [
	"selenium>=4.16.0",
	"undetected-chromedriver>=3.5.5",
	"packaging>=23.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Disable automatic package discovery to avoid flat-layout errors
packages = []

[tool.uv]
package = false
